--- a/Recruiter/Resume/resume.html
+++ b/Recruiter/Resume/resume.html
@@ -10,7 +10,8 @@
 <body>
     <div id="container">
         <iframe src="Resume_for_portfolio.pdf"></iframe>
-        <img src="Resume_phone.jpg">
+        <img src="Resume_phone1.jpg" style="grid-area: img1;"><br /><img src="Resume_phone2.jpg"
+            style="grid-area: img2;">
         <button onclick="back()">Back</button>
     </div>
 
