--- a/Recruiter/index.html
+++ b/Recruiter/index.html
@@ -140,7 +140,7 @@
             </p>
             <!-- <hr style="width: 35vw;" /> -->
             <p id="p3">
-                <big>3)  Website : Leisure ActiviTEAs</big><br /><br />
+                <big>3)  Website : Leisure ActiviTEAs (Group Project)</big><br /><br />
                 <b style="color : #464646">•</b> Programming languages : <i>JavaScript, HTML, CSS, PHP,
                     PostgreSQL</i><br />
                 <b style="color : #464646">•</b> Framework used : <i>Bootstrap</i><br />
@@ -166,8 +166,8 @@
             <p id="p4">
                 <big>4)  Website : Portfolio Website</big><br /><br />
                 <b style="color : #464646">•</b> Programming languages : <i>JavaScript, HTML, CSS</i><br />
-                <b style="color : #464646">•</b> Features : <i>Responsive design, Use of CSS animations and transitions,
-                    Includes a 2D game, Easy to navigate</i><br />
+                <b style="color : #464646">•</b> Features : <i>Responsive design, Interactive, Use of CSS animations and
+                    transitions, Includes a 2D game, Easy to navigate</i><br />
                 <!-- <b style="color : #464646">•</b> About : <i>We have tried to include the things that are searched the
                     most related to the 5 most common hobby fields namely Art, Music, Sports, Food, Photography under a
                     single domain.</i> -->
