--- a/Student/index.html
+++ b/Student/index.html
@@ -124,12 +124,12 @@
                     </p>
 
                     <div id="contact">
-                        <p style="grid-area: dropEmail; padding: 0;">Drop me an email 📧 : </p><a id="goToGmail"><button
+                        <p style="grid-area: dropEmail; padding: 0;" id="dropEmailPara">Drop me an email 📧 : </p><a id="goToGmail"><button
                                 id="gmail"
                                 style="background-image: url('../Recruiter/gmail.png'); background-size: cover; grid-area: gmail;"
                                 title="Copy email ID"></button></a>
                         <!-- <p style="grid-area: emailID;" id="emailID">sanjanajoshi2023@gmail.com</p> -->
-                        <p style="grid-area: connect; padding: 0.1vw 0vw 3vw 0vw;">Let's connect 🔗 : </p><button
+                        <p style="grid-area: connect; padding: 0vw 0vw 3vw 0vw;">Let's connect 🔗 : </p><button
                             id="linkedIn"
                             style="background-image: url('../Recruiter/linkedIn.png'); background-size: cover; grid-area: LI;"
                             title="Go to my LinkedIn profile"></button>
