--- a/Game/instructions.html
+++ b/Game/instructions.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>General instructions</title>
+    <title>General Instructions</title>
     <link rel="stylesheet" href="instrucCSS.css">
 </head>
 
